--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ author_profile: true
 <p><strong>Focus Areas:</strong></p>
 <ul>
   <li><strong>Human-Level Intelligent Agents:</strong> I am focused on developing AI that can perform tasks and think at a level similar to humans.</li>
-  <li><strong>Artificial Consciousness and Emotions:</strong> I am researching how to create AI that can experience consciousness and emotions.</li>
+  <li><strong>Artificial Consciousness and Emotions:</strong> I am interested in developing formal theories that explain consciousness and emotions.</li>
   <li><strong>Societal Applications and Ethical Issues of AI:</strong> I am deeply concerned with how AI can be used responsibly in society and the ethical implications of its use.</li>
   <li><strong>Philosophy of Technology, Cybernetics, and Artificial Life:</strong> I explore the philosophical questions related to technology, the science of control and communication in animals and machines (cybernetics), and artificial life.</li>
 </ul>
