소개글 수정

--- a/index.html
+++ b/index.html
@@ -3,27 +3,25 @@ layout: single
 author_profile: true
 ---
 <h3 id="hi-there-i-m-do-hyeon-lee-from-south-korea-">Hi there 👋 I'm Do-Hyeon Lee from South Korea🇰🇷</h3>
-<p>I am affiliated with the <a href="https://www.army.mil.kr/sites/army/index.do">Republic of Korea Army</a>, serving as a <a href="https://www.rond.or.kr/CmsHome/MainDefault.aspx">Research Officer for National Defense</a>. I am currently assigned to the <a href="https://www.add.re.kr/eps">Agency for Defense Development</a> (Jun 2022 - May 2025). I received a B.S. degree in Mathematics from <a href="https://www.postech.ac.kr/eng/">POSTECH</a> in Feb 2022.</p>
+<p>I am affiliated with the <a href="https://www.army.mil.kr/sites/army/index.do">Republic of Korea Army</a>, serving as a <a href="https://www.rond.or.kr/CmsHome/MainDefault.aspx">Research Officer for National Defense</a>. I am currently assigned to the <a href="https://www.add.re.kr/eps">Agency for Defense Development</a> (Jun 2022 - May 2025). I received a B.S. degree in Mathematics from <a href="https://www.postech.ac.kr/eng/">POSTECH</a> in Feb 2022. Currently, I am working on intelligent weapon systems development related to anti-submarine and subterranean operations. My background in mathematics supports this work, allowing me to develop sophisticated algorithms and models.</p>
 
 <h3>About Me:</h3>
-<p><strong>Exploring:</strong> I am dedicated to exploring a unified framework that connects the mind, body, and behavior. This means understanding how our thoughts, brain functions, and actions are interconnected.</p>
+<p><strong>Exploring:</strong> I am dedicated to exploring a unified framework that connects the mind, body, and behavior. This means understanding how thoughts, brain functions, biological circuits and actions are interconnected.</p>
 
-<p><strong>Interdisciplinary Approach:</strong> My research spans a wide range of fields. I draw from mathematics and philosophy, as well as robotics and hardware design. This interdisciplinary approach helps me look at problems from various angles and find innovative solutions.</p>
+<p><strong>Interdisciplinary Approach:</strong> My research spans a wide range of fields. From mathematics/philosophy to robotics/theoretical hardware design. This interdisciplinary approach helps me look at problems from various angles and find innovative solutions.</p>
 
 <p><strong>Focus Areas:</strong></p>
 <ul>
   <li><strong>Human-Level Intelligent Agents:</strong> I am focused on developing AI that can perform tasks and think at a level similar to humans.</li>
-  <li><strong>Artificial Consciousness and Emotions:</strong> I am interested in developing formal theories that explain consciousness and emotions.</li>
+  <li><strong>Artificial Consciousness and Feeling:</strong> I am interested in developing formal theories that explain consciousness and feelings.</li>
   <li><strong>Societal Applications and Ethical Issues of AI:</strong> I am deeply concerned with how AI can be used responsibly in society and the ethical implications of its use.</li>
   <li><strong>Philosophy of Technology, Cybernetics, and Artificial Life:</strong> I explore the philosophical questions related to technology, the science of control and communication in animals and machines (cybernetics), and artificial life.</li>
 </ul>
 
-<p><strong>Current Work:</strong> Currently, I am working on AI and robotics weapon systems. My background in mathematics supports this work, allowing me to develop sophisticated algorithms and models.</p>
-
 <p><strong>Looking For:</strong> I am seeking a Ph.D. program that aligns with my interests, particularly in:</p>
 <ul>
-  <li><strong>Theory-Driven Reinforcement Learning:</strong> I want to dive deeper into how theoretical frameworks can improve reinforcement learning in AI.</li>
-  <li><strong>Informatics on Consciousness and Emotions:</strong> I am interested in studying how information technology can help us understand and replicate consciousness and emotions in machines.</li>
+  <li><strong>Theory-Driven Reinforcement Learning:</strong> I want to dive deeper into how theoretical frameworks from computational neuroscience and mathematical psychology can help to achieve animal/human-level intelligence.</li>
+  <li><strong>Informatics on Consciousness and Feeling:</strong> I am interested in studying how information theory can help us understand and generate consciousness and feeling in machines.</li>
 </ul>
 
 <p><strong>Keywords:</strong> <strong>Computational Neuroscience</strong>, <strong>Human-Level AI</strong>, <strong>Consciousness and Feeling</strong></p>
